--- a/Landing Page/view/addjob.html
+++ b/Landing Page/view/addjob.html
@@ -26,7 +26,7 @@
 
                                     </div><!-- /. tools -->
                                    
-                                    <i class="ion ion-person-add"></i>
+                                    <i class="fa fa-plus"></i>
 
                                     <h3 class="box-title">Add Job</h3>
                                 </div><!-- /.box-header -->
