--- a/Landing Page/view/addnew.html
+++ b/Landing Page/view/addnew.html
@@ -20,7 +20,7 @@
 
                                     </div><!-- /. tools -->
                                    
-                                   <i class="ion ion-person-add"></i>
+                                   <i class="fa fa-plus"></i>
 
                                    <h3 class="box-title">Add New User</h3>
                                </div><!-- /.box-header -->
