--- a/Landing Page/view/approved.html
+++ b/Landing Page/view/approved.html
@@ -5,7 +5,7 @@
   <script>
       $("#proceed1, #proceed2, #proceed3, #proceed4").click(function(e){ e.preventDefault();
                                                             $("#first0").append("<div id='xyz'></div>");
-                                                                $("#xyz").load();
+                                                                $("#xyz").load("slc.html");
                                                                });
       $("#promote1, #promote2, #promote3, #promote4").click(function(e){ e.preventDefault();
                                                             $("#first0").append("<div id='abc'></div>");
@@ -38,22 +38,22 @@
                       <div class="box-body table-responsive no-padding">
                                     <table class="table table-hover">
                                     <tr>
-                                    <td><i class="fa fa-check"></i> Vacancy for the post of Web Developer from PD Department</td>
+                                    <td><i class="fa fa-circle-o"></i> Vacancy for the post of Web Developer from PD Department</td>
                                         <td><button class="btn btn-warning btn-sm" id="promote1">Promote</button></td>
                                     <td><button class="btn btn-primary btn-sm" id="proceed1">Proceed</button></td>
                                     </tr>
                                     <tr>
-                                    <td><i class="fa fa-check"></i> Vacancy for the post of Analyst from QA Department</td>
+                                    <td><i class="fa fa-circle-o"></i> Vacancy for the post of Analyst from QA Department</td>
                                         <td><button class="btn btn-warning btn-sm" id="promote2">Promote</button></td>
                                     <td><button class="btn btn-primary btn-sm" id="proceed2">Proceed</button></td>
                                     </tr>
                                     <tr>
-                                    <td><i class="fa fa-check"></i> Vacancy for the post of Senior HR from HR Department</td>
+                                    <td><i class="fa fa-circle-o"></i> Vacancy for the post of Senior HR from HR Department</td>
                                         <td><button class="btn btn-warning btn-sm" id="promote3">Promote</button></td>
                                     <td><button class="btn btn-primary btn-sm" id="proceed3">Proceed</button></td>
                                     </tr>
                                     <tr>
-                                    <td><i class="fa fa-check"></i> Vacancy for the post of Project Manager from PD Department</td>
+                                    <td><i class="fa fa-circle-o"></i> Vacancy for the post of Project Manager from PD Department</td>
                                     <td><button class="btn btn-warning btn-sm" id="promote4">Promote</button></td>
                                     <td><button class="btn btn-primary btn-sm" id="proceed4">Proceed</button></td>
                                     </tr>
