--- a/Landing Page/view/drafts.html
+++ b/Landing Page/view/drafts.html
@@ -27,7 +27,7 @@
 										
 
                                     </div><!-- /. tools -->
-                                   
+                                   <h3 class="box-title">Drafts</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
                                     <div class="box-tools pull-right">
