--- a/Landing Page/view/org_details.html
+++ b/Landing Page/view/org_details.html
@@ -19,7 +19,7 @@
 
                                     </div><!-- /. tools -->
                                    
-                                    <i class="ion ion-compose"></i>
+                                    <i class="fa fa-gear"></i>
 
                                     <h3 class="box-title">Organization Details</h3>
                                 </div><!-- /.box-header -->
