--- a/Landing Page/view/Round_schedule.html
+++ b/Landing Page/view/Round_schedule.html
@@ -9,7 +9,7 @@
 
 				<section>
 					<div class="row">
-                        <div class="col-lg-6 ">
+                        <div class="col-lg-12 ">
                               <div class="box box-primary" style="padding-top:5px">
                                 <div class="box-header">
                                     <!-- tools box -->
@@ -24,12 +24,12 @@
                                     </div><!-- /. tools -->
                                    
 									
-									<div class="form-group"><h3><label>ROUND-2 Details</label></h3>
+									<div class="form-group"><h3><label>&nbsp;&nbsp;ROUND-2 Details</label></h3>
 									</div>
 									<div class="form-group">
-										<label>Requisition By: A. Behera</label>
-										<div><label>Date of Request: 16-06-14</label></div>
-										<div><label>Date of Approval: 17-06-14</label></div>
+										<label>&nbsp;&nbsp;&nbsp;&nbsp;Requisition By: A. Behera</label>
+										<div><label>&nbsp;&nbsp;&nbsp;&nbsp;Date of Request: 16-06-14</label></div>
+										<div><label>&nbsp;&nbsp;&nbsp;&nbsp;Date of Approval: 17-06-14</label></div>
 									</div>
 									
 								</div><!-- /.box-header -->
@@ -41,6 +41,7 @@
                                             <th>Schedule Interview Date</th>
                                             <th>Schedule Interview Time</th>
 											<th>Select Interviewer</th>
+                                            <th>Select</th>
                                         </tr>
                                         <tr>
                                             <td><a>A. Das</a></td>
@@ -71,7 +72,7 @@
 													</select>
 												</div>
 											</td>
-                                        
+                                            <td><input type="checkbox"/></td>
                                         </tr>
                                         <tr>
                                             <td><a>P. Nag</a></td>
@@ -101,8 +102,8 @@
 														<option>Arun Chauhan</option>
 													</select>
 												</div>
-											</td>
-                                        
+											</td>                                            
+                                            <td><input type="checkbox"/></td>
                                         </tr>
                                         <tr>
                                             <td><a>K. Mishra</a></td>
@@ -133,6 +134,7 @@
 													</select>
 												</div>
 											</td>
+                                            <td><input type="checkbox"/></td>
                                         </tr>
                                         <tr>
                                             <td><a>D. Singh</a></td>
@@ -162,19 +164,18 @@
 														<option>Arun Chauhan</option>
 													</select>
 												</div>
-											</td>
-                                        
+											</td>                                            
+                                            <td><input type="checkbox"/></td>
+                                
                                         </tr>
                                     </table>
                                 </div><!-- /.box-body -->
                                 <div class="box-footer clearfix">
-                                    <ul class="pagination pagination-sm no-margin pull-right">
-                                        <li><a href="#">&laquo;</a></li>
-                                        <li><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li><a href="#">&raquo;</a></li>
-                                    </ul>
+                                    
+                                    <div class="box-footer">
+                                        <button type="reset" class="btn btn-default pull-right">Cancel</button>
+                                       <button type="submit" class="btn btn-success pull-right">Send Mail</button>
+                                    </div>
                                 </div>
                             </div><!-- /.box -->
 						</section>
