--- a/Landing Page/view/index.html
+++ b/Landing Page/view/index.html
@@ -36,6 +36,7 @@
                          $("#content_blocks").prepend('<div id="first'+i+'"></div>');
                          $('#first'+i+'').load("editprofile.html");
                         i++;
+                        $(this).css("pointer-events", "none");
                     });
                     $("#editorg").click(function(e){ 
                         e.preventDefault();
@@ -134,7 +135,29 @@
                          $('#first'+i+'').load("existingusers.html");
                         i++;
                         
-                    });       
+                    }); 
+                                               $("#interview").click(function(e){ 
+                        e.preventDefault();
+                         $("#content_blocks").prepend('<div id="first'+i+'"></div>');
+                         $('#first'+i+'').load("myinterviewer.html");
+                        i++;
+                        
+                    });   
+                                                            $(".schedule").click(function(e){ 
+                        e.preventDefault();
+                         $("#content_blocks").prepend('<div id="first'+i+'"></div>');
+                         $('#first'+i+'').load("slc.html");
+                        i++;
+                        
+                    });   
+                                                               $("#evaluation").click(function(e){ 
+                        e.preventDefault();
+                         $("#content_blocks").prepend('<div id="first'+i+'"></div>');
+                         $('#first'+i+'').load("evaluationSheet");
+                        i++;
+                        
+                    });          
+                             
                });
 	/*$(document).ready(function(){
 		$("#a_newuser").click(function(e){ 
@@ -302,7 +325,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#scheduler">
+                            <a href="" class="schedule">
                                 <i class="fa fa-calendar"></i> <span>Scheduler</span>
                             </a>
                        </li>
@@ -330,24 +353,24 @@
                         </li>
                         <li>
                             <a href="" id="editorg">
-                                <i class="ion ion-person-add"></i> <span>Edit Organization Details</span>
+                                <i class="fa fa-gear"></i> <span>Edit Organization Details</span>
                             </a>
                         </li>
-                        <li class="treeview">
+                        <!--<li class="treeview">
                             <a href="#" id="ces">
                                 <i class="ion ion-ios7-compose"></i> <span>Evaluation Sheet</span>
                             </a>
-                        </li>
+                        </li>-->
                         <li class="treeview">
                             <a href="#ces">
-                                <i class="ion ion-android-folder"></i><span>Candidate Database</span>
+                                <i class="fa fa-database"></i><span>Candidate Database</span>
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             
                             <ul class="treeview-menu">
                                 <li><a href="" id="cdb"><i class="fa fa-angle-double-right"></i> Search Candidate</a></li>
-                                <li><a href="#importcv"><i class="fa fa-angle-double-right"></i> Import CVs</a></li>
-                                <li><a href="#talentpool"><i class="fa fa-angle-double-right"></i>Talent Pool</a></li>
+                               <!-- <li><a href="#importcv"><i class="fa fa-angle-double-right"></i> Import CVs</a></li>
+                                <li><a href="#talentpool"><i class="fa fa-angle-double-right"></i>Talent Pool</a></li>-->
                                
                             </ul>
                         </li>
@@ -391,7 +414,7 @@
                                     <i class="glyphicon glyphicon-stats"></i>
                                 </div>
                                 <a href="" class="small-box-footer companydetails">
-                                    More info <i class="fa fa-arrow-circle-right"></i>
+                                    More info &nbsp;<i class="fa fa-arrow-circle-right"></i>
                                 </a>
                             </div>
                         </div><!-- ./col -->
@@ -411,7 +434,7 @@
                                     <i class="glyphicon glyphicon-stats"></i>
                                 </div>
                                 <a  href="" class=" employeedetail small-box-footer">
-                                    More info <i class="fa fa-arrow-circle-right"></i>
+                                    More info &nbsp;<i class="fa fa-arrow-circle-right"></i>
                                 </a>
                             </div>
                         </div><!-- ./col -->
@@ -430,7 +453,7 @@
                                     <i class="fa fa-briefcase"></i>
                                 </div>
                                 <a href="#" class="all_vacancies small-box-footer">
-                                    More info <i class="fa fa-arrow-circle-right"></i>
+                                    More info &nbsp;<i class="fa fa-arrow-circle-right"></i>
                                 </a>
                             </div>
                         </div><!-- ./col -->
@@ -448,8 +471,8 @@
                                 <div class="icon" style="padding-bottom:20px; padding-right:15px;">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                <a href="#" class="small-box-footer">
-                                    More info <i class="fa fa-arrow-circle-right"></i>
+                                <a href="#" class="small-box-footer schedule">
+                                    More info &nbsp;<i class="fa fa-arrow-circle-right"></i>
                                 </a>
                             </div>
                         </div><!-- ./col -->
